--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "production": "webpack --mode=production"
   },
   "dependencies": {
+    "connect-redis": "^4.0.2",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
@@ -19,6 +20,7 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "pug": "2.0.0-beta11",
+    "redis": "^2.8.0",
     "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
