--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "passport-local": "^1.0.0",
     "pug": "2.0.0-beta11",
     "redis": "^2.8.0",
-    "serve-favicon": "^2.5.0"
+    "serve-favicon": "^2.5.0",
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.6.0",
