--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "mysql": "^2.17.1",
+    "mysql2": "^1.7.0",
     "node-fetch": "^2.6.0",
     "node-sass-middleware": "0.11.0",
     "passport": "^0.4.0",
